<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ViewPageActivity1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/bottomView">

        <include layout="@layout/layout_toolbar" />

        <com.document.scanner.view.CustomViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/bottomView"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/addPageLayout"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_add_page_black_24dp"
                    android:scaleType="centerInside"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/add_page" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/reorderLayout"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_reorder_black_24dp"
                    android:scaleType="centerInside"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/reorder"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cropLayout"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_crop_black_24dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/crop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rotateLayout"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_rotate_right_black_24dp"
                    android:scaleType="centerInside"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/rotate" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/filterLayout"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_photo_filter_black_24dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/filter" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/deleteLayout"
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="vertical"
                android:padding="@dimen/dimen_5dp">

                <ImageView
                    android:layout_width="@dimen/dimen_30dp"
                    android:layout_height="@dimen/dimen_30dp"
                    android:layout_gravity="center"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/ic_delete_black_24dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:gravity="center"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</RelativeLayout>
